// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`optionSelectorField > should render correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <fieldset
        class="uv_a8s2fv0 uv_a8s2fv1"
        name="test"
      >
        <label
          class="uv_l58dz70 uv_a8s2fv4 uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsn uv_1do42ls1a uv_1do42ls32"
        >
          label
        </label>
        <div
          class="uv_a8s2fv6 uv_uf6pag0"
        >
          <div
            aria-controls="_r_6_"
            aria-describedby="_r_6_"
            class="uv_10e61c29 uv_10e61c2b"
            tabindex="-1"
          >
            <div
              class="uv_xf61n40 uv_xf61n42d uv_xf61n45j"
            >
              <div
                aria-controls="_r_6_"
                aria-expanded="false"
                class="uv_r8qe46 uv_r8qe45 uv_r8qe4a uv_r8qe4e"
                data-disabled="false"
                data-readonly="false"
                data-testid="first-selector"
                id="_r_4_"
                role="combobox"
                tabindex="0"
              >
                <span
                  class="uv_r8qe44 uv_1do42ls0 uv_1do42ls7 uv_1do42lsb uv_1do42lsj uv_1do42ls1d uv_1do42ls35"
                  style="--uv_1giziax1: nowrap;"
                >
                  Select item
                </span>
                <div
                  class="uv_r8qe42 uv_xf61n40 uv_xf61n4d uv_xf61n42j uv_xf61n43p"
                >
                  <svg
                    aria-hidden="true"
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzf uv_icons_1sbwqkz1i"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
        <svg
          aria-hidden="true"
          class="uv_a8s2fva uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz6 uv_icons_1sbwqkz9 uv_icons_1sbwqkzh uv_icons_1sbwqkz26"
          height="20"
          viewBox="0 0 20 20"
          width="20"
        >
          <path
            clip-rule="evenodd"
            d="M2.5 10c0-.388.315-.703.703-.703h11.803l-1.969-1.829a.703.703 0 1 1 .957-1.03l3.281 3.047a.703.703 0 0 1 0 1.03l-3.28 3.047a.703.703 0 1 1-.958-1.03l1.97-1.829H3.202A.703.703 0 0 1 2.5 10"
          />
          <path
            d="M6.25 10a1.875 1.875 0 1 1-3.75 0 1.875 1.875 0 0 1 3.75 0"
          />
        </svg>
        <div
          class="uv_a8s2fv8 uv_uf6pag0"
        >
          <div
            aria-controls="_r_e_"
            aria-describedby="_r_e_"
            class="uv_10e61c29 uv_10e61c2b"
            tabindex="-1"
          >
            <div
              class="uv_xf61n40 uv_xf61n42d uv_xf61n45j"
            >
              <div
                aria-controls="_r_e_"
                aria-expanded="false"
                class="uv_r8qe46 uv_r8qe45 uv_r8qe47 uv_r8qe4a uv_r8qe4e"
                data-disabled="true"
                data-readonly="false"
                data-testid="second-selector"
                id="_r_c_"
                role="combobox"
                tabindex="0"
              >
                <span
                  class="uv_r8qe44 uv_1do42ls0 uv_1do42ls1 uv_1do42ls7 uv_1do42lsb uv_1do42lsj uv_1do42ls25"
                  style="--uv_1giziax1: nowrap;"
                >
                  Select item
                </span>
                <div
                  class="uv_r8qe42 uv_xf61n40 uv_xf61n4d uv_xf61n42j uv_xf61n43p"
                >
                  <svg
                    aria-hidden="true"
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz2 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzf uv_icons_1sbwqkzm"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
    </form>
  </div>
</DocumentFragment>
`;

exports[`optionSelectorField > should render correctly disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <fieldset
        class="uv_a8s2fv0 uv_a8s2fv1"
        name="test"
      >
        <label
          class="uv_l58dz70 uv_a8s2fv4 uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsn uv_1do42ls1a uv_1do42ls32"
        >
          label
        </label>
        <div
          class="uv_a8s2fv6 uv_uf6pag0"
        >
          <div
            aria-controls="_r_q_"
            aria-describedby="_r_q_"
            class="uv_10e61c29 uv_10e61c2b"
            tabindex="-1"
          >
            <div
              class="uv_xf61n40 uv_xf61n42d uv_xf61n45j"
            >
              <div
                aria-controls="_r_q_"
                aria-expanded="false"
                class="uv_r8qe46 uv_r8qe45 uv_r8qe47 uv_r8qe4a uv_r8qe4e"
                data-disabled="true"
                data-readonly="false"
                data-testid="first-selector"
                id="_r_o_"
                role="combobox"
                tabindex="0"
              >
                <span
                  class="uv_r8qe44 uv_1do42ls0 uv_1do42ls1 uv_1do42ls7 uv_1do42lsb uv_1do42lsj uv_1do42ls25"
                  style="--uv_1giziax1: nowrap;"
                >
                  Select item
                </span>
                <div
                  class="uv_r8qe42 uv_xf61n40 uv_xf61n4d uv_xf61n42j uv_xf61n43p"
                >
                  <svg
                    aria-hidden="true"
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz2 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzf uv_icons_1sbwqkzm"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
        <svg
          aria-hidden="true"
          class="uv_a8s2fva uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz6 uv_icons_1sbwqkz9 uv_icons_1sbwqkzh uv_icons_1sbwqkz26"
          height="20"
          viewBox="0 0 20 20"
          width="20"
        >
          <path
            clip-rule="evenodd"
            d="M2.5 10c0-.388.315-.703.703-.703h11.803l-1.969-1.829a.703.703 0 1 1 .957-1.03l3.281 3.047a.703.703 0 0 1 0 1.03l-3.28 3.047a.703.703 0 1 1-.958-1.03l1.97-1.829H3.202A.703.703 0 0 1 2.5 10"
          />
          <path
            d="M6.25 10a1.875 1.875 0 1 1-3.75 0 1.875 1.875 0 0 1 3.75 0"
          />
        </svg>
        <div
          class="uv_a8s2fv8 uv_uf6pag0"
        >
          <div
            aria-controls="_r_12_"
            aria-describedby="_r_12_"
            class="uv_10e61c29 uv_10e61c2b"
            tabindex="-1"
          >
            <div
              class="uv_xf61n40 uv_xf61n42d uv_xf61n45j"
            >
              <div
                aria-controls="_r_12_"
                aria-expanded="false"
                class="uv_r8qe46 uv_r8qe45 uv_r8qe47 uv_r8qe4a uv_r8qe4e"
                data-disabled="true"
                data-readonly="false"
                data-testid="second-selector"
                id="_r_10_"
                role="combobox"
                tabindex="0"
              >
                <span
                  class="uv_r8qe44 uv_1do42ls0 uv_1do42ls1 uv_1do42ls7 uv_1do42lsb uv_1do42lsj uv_1do42ls25"
                  style="--uv_1giziax1: nowrap;"
                >
                  Select item
                </span>
                <div
                  class="uv_r8qe42 uv_xf61n40 uv_xf61n4d uv_xf61n42j uv_xf61n43p"
                >
                  <svg
                    aria-hidden="true"
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz2 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzf uv_icons_1sbwqkzm"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
    </form>
  </div>
</DocumentFragment>
`;

exports[`optionSelectorField > should trigger events 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <fieldset
        class="uv_a8s2fv0 uv_a8s2fv1"
        name="test"
      >
        <label
          class="uv_l58dz70 uv_a8s2fv4 uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsn uv_1do42ls1a uv_1do42ls32"
        >
          label
        </label>
        <label
          class="uv_l58dz70 uv_a8s2fv5 uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsn uv_1do42ls1a uv_1do42ls32"
        >
          Second
        </label>
        <div
          class="uv_a8s2fv6 uv_uf6pag0"
        >
          <div
            aria-controls="_r_1e_"
            aria-describedby="_r_1e_"
            class="uv_10e61c29 uv_10e61c2b"
            tabindex="-1"
          >
            <div
              class="uv_xf61n40 uv_xf61n42d uv_xf61n45j"
            >
              <div
                aria-controls="_r_1e_"
                aria-expanded="false"
                class="uv_r8qe46 uv_r8qe45 uv_r8qe4a uv_r8qe4e"
                data-disabled="false"
                data-readonly="false"
                data-testid="first-selector"
                id="_r_1c_"
                role="combobox"
                tabindex="0"
              >
                <span
                  class="uv_r8qe4m uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsj uv_1do42ls1a uv_1do42ls32"
                >
                  <div
                    class="uv_xf61n40 uv_xf61n4d uv_xf61n42j uv_xf61n45p"
                  >
                    <svg
                      aria-hidden="true"
                      class="uv_icons_1739vf22"
                      height="20"
                      viewBox="0 0 20 20"
                      width="20"
                    >
                      <circle
                        cx="10"
                        cy="10"
                        fill="#f47421"
                        r="9"
                      />
                      <circle
                        cx="10"
                        cy="10"
                        fill="none"
                        r="4.365"
                        stroke="#fff"
                        stroke-width="1.71"
                      />
                      <circle
                        cx="3.88"
                        cy="10"
                        fill="#f47421"
                        r="1.688"
                      />
                      <path
                        d="M13.4 10h2"
                        stroke="#f47421"
                        stroke-width=".648"
                      />
                      <circle
                        cx="3.88"
                        cy="10"
                        fill="#fff"
                        r="1.201"
                      />
                      <g
                        transform="rotate(120 10 10)"
                      >
                        <circle
                          cx="3.88"
                          cy="10"
                          fill="#f47421"
                          r="1.688"
                        />
                        <path
                          d="M13.4 10h2"
                          stroke="#f47421"
                          stroke-width=".648"
                        />
                        <circle
                          cx="3.88"
                          cy="10"
                          fill="#fff"
                          r="1.201"
                        />
                      </g>
                      <g
                        transform="rotate(240 10 10)"
                      >
                        <circle
                          cx="3.88"
                          cy="10"
                          fill="#f47421"
                          r="1.688"
                        />
                        <path
                          d="M13.4 10h2"
                          stroke="#f47421"
                          stroke-width=".648"
                        />
                        <circle
                          cx="3.88"
                          cy="10"
                          fill="#fff"
                          r="1.201"
                        />
                      </g>
                    </svg>
                    Ubuntu
                  </div>
                </span>
                <div
                  class="uv_r8qe42 uv_xf61n40 uv_xf61n4d uv_xf61n42j uv_xf61n43p"
                >
                  <svg
                    aria-hidden="true"
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzf uv_icons_1sbwqkz1i"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
        <svg
          aria-hidden="true"
          class="uv_a8s2fva uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz6 uv_icons_1sbwqkz9 uv_icons_1sbwqkzh uv_icons_1sbwqkz26"
          height="20"
          viewBox="0 0 20 20"
          width="20"
        >
          <path
            clip-rule="evenodd"
            d="M2.5 10c0-.388.315-.703.703-.703h11.803l-1.969-1.829a.703.703 0 1 1 .957-1.03l3.281 3.047a.703.703 0 0 1 0 1.03l-3.28 3.047a.703.703 0 1 1-.958-1.03l1.97-1.829H3.202A.703.703 0 0 1 2.5 10"
          />
          <path
            d="M6.25 10a1.875 1.875 0 1 1-3.75 0 1.875 1.875 0 0 1 3.75 0"
          />
        </svg>
        <div
          class="uv_a8s2fv8 uv_uf6pag0"
        >
          <div
            aria-controls="_r_1m_"
            aria-describedby="_r_1m_"
            class="uv_10e61c29 uv_10e61c2b"
            tabindex="-1"
          >
            <div
              class="uv_xf61n40 uv_xf61n42d uv_xf61n45j"
            >
              <div
                aria-controls="_r_1m_"
                aria-expanded="false"
                class="uv_r8qe46 uv_r8qe45 uv_r8qe4a uv_r8qe4e"
                data-disabled="false"
                data-readonly="false"
                data-testid="second-selector"
                id="_r_1k_"
                role="combobox"
                tabindex="0"
              >
                <span
                  class="uv_r8qe44 uv_1do42ls0 uv_1do42ls7 uv_1do42lsb uv_1do42lsj uv_1do42ls1d uv_1do42ls35"
                  style="--uv_1giziax1: nowrap;"
                >
                  Select item
                </span>
                <div
                  class="uv_r8qe42 uv_xf61n40 uv_xf61n4d uv_xf61n42j uv_xf61n43p"
                >
                  <svg
                    aria-hidden="true"
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzf uv_icons_1sbwqkz1i"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
    </form>
  </div>
</DocumentFragment>
`;
